--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="aula2_2.js"></script>
+    <script type="text/javascript" src="aula5.js"></script>
 </body>
 
 </html>
